--- a/src/SnakeGame.DesktopGL/SnakeGame.DesktopGL.csproj
+++ b/src/SnakeGame.DesktopGL/SnakeGame.DesktopGL.csproj
@@ -16,15 +16,16 @@
   <ItemGroup>
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
-    <None Update="Content\Level1.tmx">
+    <None Update="Content\Map.tmx">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="Content\snake.tsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Content\Level1.tsx">
+    <None Update="Content\Map.tsx">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
+    <None Remove="pipeline-references\**" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico">
@@ -33,6 +34,7 @@
     <EmbeddedResource Include="Icon.bmp">
       <LogicalName>Icon.bmp</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Remove="pipeline-references\**" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Extended" Version="4.0.4" />
@@ -42,12 +44,16 @@
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="**\*.mgcb" />
+    <MonoGameContentReference Remove="pipeline-references\**" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\net8.0\SnakeGame.DesktopGL.dll" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\Debug\net8.0\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="pipeline-references\**" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
