--- a/src/SnakeGame.DesktopGL/SnakeGame.DesktopGL.csproj
+++ b/src/SnakeGame.DesktopGL/SnakeGame.DesktopGL.csproj
@@ -10,22 +10,9 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
-  <PropertyGroup>
-    <MonoGameExtendedPipelineReferencePath>$(MSBuildThisFileDirectory)pipeline-references</MonoGameExtendedPipelineReferencePath>
-  </PropertyGroup>
   <ItemGroup>
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
-    <None Update="Content\Map.tmx">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </None>
-    <None Update="Content\snake.tsx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Content\Map.tsx">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </None>
-    <None Remove="pipeline-references\**" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico">
@@ -34,17 +21,11 @@
     <EmbeddedResource Include="Icon.bmp">
       <LogicalName>Icon.bmp</LogicalName>
     </EmbeddedResource>
-    <EmbeddedResource Remove="pipeline-references\**" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Extended" Version="4.0.4" />
-    <PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="4.0.4" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105" />
-  </ItemGroup>
-  <ItemGroup>
-    <MonoGameContentReference Include="**\*.mgcb" />
-    <MonoGameContentReference Remove="pipeline-references\**" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\net8.0\SnakeGame.DesktopGL.dll" />
@@ -53,7 +34,7 @@
     <Folder Include="bin\Debug\net8.0\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Remove="pipeline-references\**" />
+    <ProjectReference Include="..\SnakeGame.Core\SnakeGame.Core.csproj" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
