--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ src/SnakeGame.Core/bin/*
 src/SnakeGame.Core/obj/*
 src/SnakeGame.Core/Content/bin/*
 src/SnakeGame.Core/Content/obj/*
+src/SnakeGame.Android/bin/*
+src/SnakeGame.Android/obj/*
+src/SnakeGame.Android/Content/bin/*
+src/SnakeGame.Android/Content/obj/*
