Updated ignore file list

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-src/SnakeGame.DesktopGL/bin/*
-src/SnakeGame.DesktopGL/obj/*
-src/SnakeGame.DesktopGL/Content/bin/*
-src/SnakeGame.DesktopGL/Content/obj/*
-src/SnakeGame.Core/bin/*
-src/SnakeGame.Core/obj/*
-src/SnakeGame.Core/Content/bin/*
-src/SnakeGame.Core/Content/obj/*
-src/SnakeGame.Android/bin/*
-src/SnakeGame.Android/obj/*
-src/SnakeGame.Android/Content/bin/*
-src/SnakeGame.Android/Content/obj/*
+src/*/bin
+src/*/obj
+src/*/Content/bin
+src/*/Content/obj
+src/*/pipeline-references
+.idea
+*.user
+*.tiled-session
+*.binlog
