--- a/src/SnakeGame.DesktopGL/SnakeGame.DesktopGL.csproj
+++ b/src/SnakeGame.DesktopGL/SnakeGame.DesktopGL.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
+    <None Remove="bin\**" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico">
@@ -21,6 +22,7 @@
     <EmbeddedResource Include="Icon.bmp">
       <LogicalName>Icon.bmp</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Remove="bin\**" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Extended" Version="4.1.0" />
@@ -35,6 +37,9 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SnakeGame.Core\SnakeGame.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="bin\**" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
