--- a/src/SnakeGame.Core/SnakeGame.Core.csproj
+++ b/src/SnakeGame.Core/SnakeGame.Core.csproj
@@ -9,6 +9,7 @@
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.4">
             <PrivateAssets>All</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="NLog" Version="5.5.0" />
     </ItemGroup>
     <ItemGroup>
       <None Remove="pipeline-references\**" />
