--- a/src/SnakeGame.DesktopGL/SnakeGame.DesktopGL.csproj
+++ b/src/SnakeGame.DesktopGL/SnakeGame.DesktopGL.csproj
@@ -14,6 +14,9 @@
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
     <None Remove="bin\**" />
+    <None Update="nlog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico">
