Removed android project, removed screen game pad support, added version

--- a/src/SnakeGame.Core/SnakeGame.Core.csproj
+++ b/src/SnakeGame.Core/SnakeGame.Core.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
+        <AssemblyVersion></AssemblyVersion>
+        <FileVersion></FileVersion>
     </PropertyGroup>
     <PropertyGroup>
       <MonoGameExtendedPipelineReferencePath>$(MSBuildThisFileDirectory)pipeline-references</MonoGameExtendedPipelineReferencePath>
