--- a/src/SnakeGame.DesktopGL/SnakeGame.DesktopGL.csproj
+++ b/src/SnakeGame.DesktopGL/SnakeGame.DesktopGL.csproj
@@ -5,6 +5,8 @@
     <RollForward>Major</RollForward>
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
+    <AssemblyVersion></AssemblyVersion>
+    <FileVersion></FileVersion>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
