--- a/src/SnakeGame.Core/SnakeGame.Core.csproj
+++ b/src/SnakeGame.Core/SnakeGame.Core.csproj
@@ -8,10 +8,8 @@
       <MonoGameExtendedPipelineReferencePath>$(MSBuildThisFileDirectory)pipeline-references</MonoGameExtendedPipelineReferencePath>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.4">
-            <PrivateAssets>All</PrivateAssets>
-        </PackageReference>
-        <PackageReference Include="NLog" Version="5.5.0" />
+        <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.4" />
+        <PackageReference Include="NLog" Version="6.0.3" />
     </ItemGroup>
     <ItemGroup>
       <None Remove="pipeline-references\**" />
@@ -30,8 +28,8 @@
       </None>
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="MonoGame.Extended" Version="4.1.0" />
-      <PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="4.1.0" />
+      <PackageReference Include="MonoGame.Extended" Version="5.0.2" />
+      <PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="5.0.2" />
       <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.4" />
     </ItemGroup>
     <ItemGroup>
@@ -44,7 +42,6 @@
     </ItemGroup>
     <ItemGroup>
       <Compile Remove="pipeline-references\**" />
-      <Compile Remove="bin\**" />
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
       <Message Text="Restoring dotnet tools" Importance="High" />
